MDR-2804 Sector categories reorganisation

--- a/docroot/sites/all/themes/oira_frontend/css/print.css
+++ b/docroot/sites/all/themes/oira_frontend/css/print.css
@@ -93,6 +93,7 @@
     display: none !important;
   }
   .field-name-field-sector,
+  .field-name-field-sector-category,
   .field-name-field-country,
   .field-name-field-language {
     margin-right: 15px !important;
