--- a/docroot/sites/all/themes/oira_frontend/less/print.less
+++ b/docroot/sites/all/themes/oira_frontend/less/print.less
@@ -16,7 +16,7 @@
 		font-family: "Times New Roman" !important;
 	    /* IE 8 + */
 	    -ms-filter: 'progid:DXImageTransform.Microsoft.BasicImage(grayScale=1)';
-	    -webkit-filter: grayscale(100%); 
+	    -webkit-filter: grayscale(100%);
 		filter: grayscale(100%);
 		img, a{
 			display: none !important;
@@ -60,7 +60,7 @@
 				display: none !important;
 			}
 		}
-		
+
 		.panels-flexible-region-new-slider{
 			display: none !important;
 		}
@@ -93,7 +93,7 @@
 	.pane-node-share-widget, .hwc-share-widget{
 		display: none !important;
 	}
-	.field-name-field-sector, .field-name-field-country, .field-name-field-language{
+	.field-name-field-sector-category, .field-name-field-sector, .field-name-field-country, .field-name-field-language{
 		margin-right: 15px !important;
 	}
 	ul.pager{
@@ -462,5 +462,5 @@
 		}
 	}
 
-	
+
 }
