--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
@@ -31,7 +31,7 @@
 	.header-blocks{
 		top: 70px;
 		.region-header-block{
-			
+
 		}
 	}
 }
@@ -49,8 +49,11 @@
 	.page-promotional-resources-search .field-type-language-field,
 	.page-search-site .field-type-language-field,
 	.oira-tools-search-page .field-name-field-sector,
+	.oira-tools-search-page .field-name-field-sector-category,
 	.page-promotional-resources-search .field-name-field-sector,
+	.page-promotional-resources-search .field-name-field-sector-category,
 	.page-search-site .field-name-field-sector,
+	.page-search-site .field-name-field-sector-category,
 	.oira-tools-search-page .field-name-field-promotional-material-type,
 	.page-promotional-resources-search .field-name-field-promotional-material-type,
 	.page-search-site .field-name-field-promotional-material-type,
