--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -65,7 +65,7 @@ blockquote.image-field-caption {
 					}
 					img{
 						width: 29px;
-						
+
 					}
 				}
 				.introduction-title{
@@ -148,7 +148,7 @@ blockquote.image-field-caption {
 		}
 		.first{
 			a{
-				padding-left: 0px; 
+				padding-left: 0px;
 			}
 		}
 		.last{
@@ -366,8 +366,8 @@ h1.page-header {
 	    		}
 	    		.field-name-title-field{
 	    			a{
-	    				font-size: @font-size1 !important;	
-	    			}	
+	    				font-size: @font-size1 !important;
+	    			}
 	    		}
 	    		.tool-of-the-week-label{
 	    			position: absolute;
@@ -418,7 +418,7 @@ h1.page-header {
 						margin-bottom: 0px;
 					}
 				}
-				.field.field-name-field-country, .field-type-language-field, .field-name-field-sector{
+				.field.field-name-field-country, .field-type-language-field, .field-name-field-sector, .field-name-field-sector-category{
 					float: left;
     				clear: both;
     				margin-top: 10px;
@@ -685,7 +685,7 @@ h1.page-header {
 				width: 100% !important;
     			margin: inherit;
 			}
-		}	
+		}
 	}
 	//ADITIONAL RESOURCES
 	.panels-flexible-region-7-add_res-inside{
@@ -748,7 +748,7 @@ h1.page-header {
 		}
 	}
 	//END ADITIONAL RESOURCES
-	
+
 	//accesibility page
 	.accesibility_table{
 		p, tr, td{
@@ -756,7 +756,7 @@ h1.page-header {
 			text-align: center;
 		}
 	}
-	
+
 	//privacy notice
 	iframe{
 		width: 100%;
@@ -820,7 +820,7 @@ h1.page-header {
 			}
 		}
 	}
-	
+
 }
 //contact us
 .page-contact-us{
@@ -959,7 +959,7 @@ h1.page-header {
 /* COUNTRY PROFILE
 ********************************************************************/
 .page-country-profile{
-	
+
 	.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
 		margin-top: 5px !important;
 		padding-top: 30px;
@@ -986,11 +986,11 @@ h1.page-header {
 				}
 			}
 		}
-		
+
 		.partner-contact-container,
 		.partner-social-container,
 		.partner-colaborators-container{
-			
+
 			min-height: 0px !important;
 			.pane-contact-information-partner,
 			.pane-node-field-social-profile,
@@ -1058,9 +1058,9 @@ h1.page-header {
 					> div{
 						width: 100%;
 					}
-					.partner-contact-container, 
-					.partner-social-container, 
-					.partner-colaborators-container, 
+					.partner-contact-container,
+					.partner-social-container,
+					.partner-colaborators-container,
 					.partner-text2-container{
 						min-height: auto;
 						margin-top: 0px;
@@ -1235,9 +1235,9 @@ h1.page-header {
 			.partner-contact-container,
 			.partner-social-container,
 			.partner-colaborators-container{
-				
+
 				min-height: 0px !important;
-				
+
 				.pane-contact-information-partner,
 				.pane-node-field-social-profile,
 				.pane-node-field-collaborator{
@@ -1267,9 +1267,9 @@ h1.page-header {
 					}
 				}
 			}
-			.partner-contact-container, 
-			.partner-social-container, 
-			.partner-colaborators-container, 
+			.partner-contact-container,
+			.partner-social-container,
+			.partner-colaborators-container,
 			.partner-text2-container{
 				min-height: auto;
 				margin-top: 0px;
@@ -1721,8 +1721,8 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 .page-promotional-resources-search{
 	.panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last{
     	#oira-promotional-material-search-form {
-    		div:first-child{ 
-    			#edit-content{ 
+    		div:first-child{
+    			#edit-content{
     				.search-page-results-wrapper{
     					.node-promotional-material{
     						padding-bottom: 20px!important;
@@ -1897,9 +1897,9 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	.form-type-date-select .form-type-select[class*=hour] {
 	    margin-left: 0em;
 	}
-	#edit_field_co_author_und_chosen, 
+	#edit_field_co_author_und_chosen,
 	#edit_field_sector_und_chosen,
-	#edit_field_co_author_und__2_chosen, 
+	#edit_field_co_author_und__2_chosen,
 	#edit_field_sector_und__2_chosen {
     	width: 100% !important;
     	min-width: 100px;
@@ -1943,7 +1943,7 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 	.row{
 		margin-left: 0px !important;
-		margin-right: 0px !important; 
+		margin-right: 0px !important;
 	}
 
 }
@@ -2041,7 +2041,7 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 							}
 						}
 					}
-					
+
 				}
 			}
 			.views-submit-button{
