MDR-2804 Sector categories reorganisation

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -213,7 +213,7 @@ a.more-link{
 .field-name-pr-language{
 	display: block;
 	color: @color-text-grey;
-	font-size: 0.em;
+	font-size: 0;
 	font-weight: bold;
 	font-style: italic;
 	p{
@@ -1624,7 +1624,7 @@ a.more-link{
 							}
 						}
 					}
-					#edit-field-country, #edit-field-languagevalue, #edit-field-sector{
+					#edit-field-country, #edit-field-languagevalue, #edit-field-sector, #edit-field-sector-category{
 						label{
 							&:after{
 								content: none;
@@ -2537,7 +2537,7 @@ div[id ^= "mini-panel-partner_in_"], {
 			font-size: 1em;
 			font-weight: normal;
 			font-style: normal;
-			margin-top: 0em;
+			margin-top: 0;
 			margin-right: 0px;
 			margin-bottom: 15px;
 		}
