MDR-3320 - Change on explanatory text/background info for each tool

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -6231,3 +6231,17 @@ body.front .view-slideshow blockquote.image-field-caption p,
     }
 }
 
+/* MDR-3320 - Change on explanatory text/background info for each tool */
+
+.oira-tools-search-page{
+	.view-mode-teaser{
+		.group-right{
+			.field-name-body{
+				display: none;
+			}
+			.field-name-body.active{
+				display: block;
+			}
+		}
+	}
+}
