--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -13063,6 +13063,13 @@ body.front .view-slideshow blockquote.image-field-caption p,
   color: #10b2e4;
   font-style: normal;
 }
+/* MDR-3320 - Change on explanatory text/background info for each tool */
+.oira-tools-search-page .view-mode-teaser .group-right .field-name-body {
+  display: none;
+}
+.oira-tools-search-page .view-mode-teaser .group-right .field-name-body.active {
+  display: block;
+}
 /*FOOTER
 ********************************************/
 .site-footer {
